common/common.scss
/* ... */
#create-topic svg {
    color: #fff;
}

#navigation-bar a {
    border-radius: 5px;
    color: var(--primary-900)
}

#navigation-bar a.active {
    background-color: var(--tertiary) !important;
    color: #fff !important;
}


.topic-list > thead > tr > th,
.category-list .category,
.category-list .topics {
    font-size: 16px;
    color: #444;
}


#navigation-bar a:not(.active):hover {
    background-color: var(--primary-low) !important;
    color: var(--tertiary) !important;
}

.mdl-button--icon i {
    line-height: 32px;
    color: var(--tertiary);
}


.topic-body,
.topic-avatar {
    border-top: 0 !important;
}

.topic-post {
    padding: 0 15px;
}

.topic-post:not(:first-child),
.time-gap {
    border-top: 1px solid #ddd;
}

.time-gap {
    max-width: 800px !important;
}


.topic-status-info {
    border: 0;
}

.loading-container {
    width: auto;
    margin: 0 auto;
}

#topic-footer-buttons {
    width: -webkit-fill-available;
}

#topic-footer-button-bookmark,
#topic-footer-button-share-and-invite,
#topic-footer-button-flag {
    border: 1px solid var(--primary-200);
    background: transparent;
    border-radius: 5px;
    color: #666;
}

#topic-footer-button-bookmark:hover,
#topic-footer-button-share-and-invite:hover,
#topic-footer-button-flag:hover {
    color: #444;
    background-color: #eee;
}

#topic-footer-button-bookmark i,
#topic-footer-button-share-and-invite i,
#topic-footer-button-flag i,
#topic-footer-buttons .create.btn i,
.post-info.edits i::before {
    font-size: 17px;
    line-height: 0;
    vertical-align: middle;
    margin-right: 5px;
    padding-bottom: 3px;
}

#topic-footer-buttons .create.btn {
    float: right;
    border-radius: 5px;
    background-color: var(--tertiary) !important;
    margin-right: 0;
    cursor: pointer;
}

.topic-notifications-button {
    margin: 5px 0 0 0;
}

#topic-footer-buttons .topic-notifications-button .btn {
    border: 1px solid var(--primary-200);
    border-radius: 5px;
    background: transparent;
    outline: none !important;
}

.with-shadow {
    box-shadow: 0 2px 8px rgba(0, 0, 0, 0.2);
}

.alert.alert-info.clickable a {
    color: var(--tertiary);
}

.alert.alert-info {
    background-color: #fff;
    border: 1px solid var(--primary-200);
    border-radius: 5px;
    margin-bottom: 8px;
}

.topic-list .topic-list-item-separator td {
    background: var(--danger-medium);
}

.topic-list .topic-list-item-separator td span {
    text-transform: capitalize;
}

#suggested-topics {
    border: 1px solid var(--primary-200);
    border-radius: 5px;
    padding: 0;
    margin-bottom: 20px;
}

.suggested-topics {
    border: 1px #ddd solid;
    border-radius: 5px;
    padding-top: 2px;
    margin-bottom: 20px;
}

.suggested-topics-title {
    font-size: 18px;
    margin: 0;
    padding: 5px 10px;
    border-bottom: 1px solid #ddd;
}

.suggested-topics table,
.suggested-topics .topics {
    margin: 0;
    padding: 0;
}

.suggested-topics-message {
    font-size: 16px;
    padding: 5px 10px;
    margin: 0;
    color: var(--primary-600);
}

#list-area {
    margin: 0;
}

.topic-map {
    border-radius: 5px;
    background: transparent;
    margin: 0 0 20px 0;
    border: 1px solid var(--primary-200);
}

.topic-map section {
    background: transparent;
    border: 0;
}

.topic-map section:not(:first-child) {
    border-top: 1px solid #ddd;
}

.topic-map .buttons .btn {
    background: transparent;
    border: 0;
    border-left: 1px solid #ddd;
}

.topic-map .buttons .btn i::before {
    font-size: 20px !important;
}

.topic-status i {
    margin-right: 5px;
    vertical-align: middle;
    color: #444;
}

.title-wrapper > h1 > div > span > .fa-lock::before {
    vertical-align: middle;
    padding-bottom: 5px;
    font-size: 22px;
    color: #444;
}

.post-menu-area {
    margin: 0 !important;
}

.actions > .double-button:hover button {
    background-color: transparent !important;
}

.actions > .double-button > .like-count {
    margin-right: 5px;
}

.post-controls button.share,
.post-controls button.show-more-actions,
.post-controls button.create-flag,
.post-controls button.bookmark,
.actions > .double-button > .toggle-like {
    padding: 0 7px !important;
    border-radius: 5px;
    height: 30px;
    margin: 0 5px;
}

.post-controls button.reply,
.post-controls button.show-replies {
    height: 30px;
    border: 1px solid var(--primary-200);
    border-radius: 5px;
    padding: 0 7px;
    color: #444 !important;
}

.post-controls button.reply i,
.post-controls button.show-replies i {
    color: #444 !important;
    display: inline-flex;
    vertical-align: bottom;
}

.embedded-posts .collapse-up {
    border-radius: 5px;
}

.nav.post-controls .post-admin-menu {
    border-radius: 5px;
}

nav.post-controls .actions button {
    vertical-align: initial;
}

nav.post-controls button {
    border-radius: 5px;
}

nav.post-controls button:active {
    box-shadow: none;
}

nav.post-controls button:not(.reply) i::before {
    font-size: 20px !important;
}

nav.post-controls .double-button button.has-like .d-icon {
    color: var(--tertiary);
}

// nav.post-controls .double-button button.has-like {}

blockquote::after,
blockquote::before {
    display: none;
}

blockquote {
    border-radius: 5px;
    border: 1px solid var(--primary-200);
    border-left: 5px solid #ddd;
    font-family: 'Roboto', 'Helvetica', 'Arial', sans-serif;
    position: relative;
    font-size: 14px;
    line-height: 1.35;
    font-style: normal;
    letter-spacing: 0.08em;
}

kbd,
code {
    font-family: 'Cascadia Code', monospace !important;
}

code {
    background-color: #f4f4f4 !important;
    border-radius: 5px;
    font-size: 90% !important;
    padding: 0.3em 0.5em !important;
    white-space: pre;
}

pre code {
    padding: 0.5em 0.9em !important;
}

aside .title {
    line-height: 100%;
    border-radius: 5px 5px 0 0;
    border: 1px solid var(--primary-200);
    border-bottom: 0;
    border-left: 5px solid #ddd !important;
}
/* ... */

